# My_chess_program

./: .gitattributes  .gitignore  README.md  pyproject.toml  training_data.pkl
My_chess_program.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
chess/: chess.py  chessAI.py  chessGUI.py  start_with_input.py
chess/old_versions/: Chess engine.htm  Chess style.css  chess.py  chess3.py  chessAI.py  chessGUI.py
tests/: test_chessAI.py  test_start_with_input.py
